tests/transpiler/x/clj/json_builtin.clj
;; Generated by Mochi v0.10.31 on 2025-07-20 09:41:16 GMT+7
(ns main)

(def m (hash-map a 1 b 2))

(defn -main []
  (json m))

(-main)
